# hackageship

./: Dockerfile  README.md  docker-build  docker-run  dummy.cabal  hackageship.go
public/: index.html
templates/: add-success.tmpl  add.tmpl  history-entry.tmpl  history.tmpl  index.tmpl  layout.tmpl  not-found.tmpl
